--- a/src/pages/index.mdx
+++ b/src/pages/index.mdx
@@ -14,68 +14,95 @@ import LinkCard from "../components/page/LinkCard.astro";
   <BaseCard title="Home">
     <div class="flex">
       <div class="p-6">
-          # Hi there! 👋
+          Welcome to Mrs. Lacey and Mrs. Rhoades' classroom
 
-          This is the Frosti theme
-
-          A clean, elegant, and fast static blog template
+          Where we move mountains together in learning and life!
       </div>
     </div>
 
   </BaseCard>
 
-  <BaseCard title="Home" image="/index.webp">
-# Frosti Introduction
+<BaseCard title="Home" image="/index.webp">
+# Mrs. Lacey and Mrs. Rhoades
 
 ---
 
-## Welcome to Frosti Blog Template
+## Welcome to Our 2nd Grade Classroom
 
-### 🧊 Frosti
+### 🏔️ Where We Move Mountains Together
 
-**A clean, elegant, and fast static blog template! 🚀 Developed with [Astro](https://astro.build/)!**
+**A beautiful community of learners! 🚀 Guided by the enthusiasm of Mrs. Lacey and Mrs. Rhoades!**
 
-[**🖥️ Frosti Demo**](https://frosti.saroprock.com)&nbsp;&nbsp;&nbsp;/&nbsp;&nbsp;&nbsp;[**🌏 Chinese README**](https://github.com/EveSunMaple/Frosti/blob/main/README.zh-CN.md)&nbsp;&nbsp;&nbsp;/&nbsp;&nbsp;&nbsp;[**❤️ My Blog**](https://www.saroprock.com)
+[**📞 Contact Us**](tel:8128769600,,2824)&nbsp;&nbsp;&nbsp;/&nbsp;&nbsp;&nbsp;[**✉️ Email Us**](mailto:hrhoades@rbbschools.net,mlacey@rbbschools.net)&nbsp;&nbsp;&nbsp;/&nbsp;&nbsp;&nbsp;[**💬 Message on DOJO**](https://www.classdojo.com)
 
-### Why Choose Frosti?
+### About Your Teachers
 
-- **Lightning-fast Access Speed and Excellent SEO**: Your blog content spreads quickly and efficiently.
-- **View Transition Animations**: Smooth visual experience with ViewTransitionsAPI.
-- **Integrated Sidebar**: Includes social info cards, theme switch, back-to-top button, and persistent article directory.
-- **Powerful Search Functionality**: Easily search articles using pagefind.
-- **Day/Night Mode**: Adapt to different reading environments.
-- **Rich Components**: Collapsible pages, link cards, timeline components, various alerts, code block copy button, image comparison, and end-of-article copyright information.
-- **Comment System**: Built with [Waline](https://waline.js.org/) for interactive discussions.
-- **Responsive Design**: Crafted with [Tailwind CSS](https://tailwindcss.com/) and [daisyUI](https://daisyui.com/) to fit different devices.
+- **Mrs. Lacey**: 9th year teaching 2nd grade at EPS, IU graduate, loves community learning
+- **Mrs. Rhoades**: 8th year teaching, 7th at EPS, Kentucky Christian University graduate, passionate about encouraging a love for reading
 
-### Feature Highlights
+### Classroom Highlights
 
-- **Easy Installation and Use**: Install with just one command, customize everything in `consts.ts`.
-- **Variety of Article Components**: Enhance the presentation of your blog content.
+- **Community Supplies**: Sharing resources to build a collaborative environment
+- **Reading Adventures**: Exploring new worlds through books
+- **Interactive Learning**: Engaging activities to make learning fun and memorable
+- **Growth Mindset**: Navigating the peaks and valleys of learning together
 
-### How to Get Started?
+### How to Get Ready for 2nd Grade
 
-1. **Install Frosti**
+1. **Join Us for Meet & Greet**
 
-   Simply run the following command in your terminal:
+   Tuesday, August 6th between 4:00-5:00pm
 
-   ```sh
-   npm create astro@latest -- --template EveSunMaple/Frosti
-   ```
+   - See our room
+   - Drop off supplies
+   - Get important information
 
-2. **Configure the Comment System**
+2. **Prepare Your Supplies**
 
-   Set up [Waline](https://waline.js.org/) to enable comments. Check `src\components\Comment.astro` for details.
+   Check out our supply list below and bring items to Meet & Greet
 
-### Future Plans
+### Supply List
 
-- **Integrate Headless CMS**.
-- **Fix Known Style Bugs**.
-- **More Features Coming Soon...**
+- 1 plastic school box
+- 2 boxes of crayons (24 pack)
+- 2 boxes of Crayola markers (thick or thin)
+- 2 large tissue boxes
+- 1 pair of pointed Fiskars scissors
+- 4-6 Elmer's glue sticks
+- 2 yellow highlighters
+- 2 boxes of 12 Ticonderoga #2 yellow pencils
+- 8-10 Expo dry erase markers (black, broad tip)
+- 1 sturdy clipboard standard size (not plastic)
+- 2 plastic 3-prong pocket folders (1 blue, 1 yellow)
+- 1 set of headphones
 
-### Special Thanks
+### Optional Donations
 
-A big thanks to @[Saicaca](https://github.com/saicaca) and @[WRXinYue](https://github.com/WRXinYue) for their inspiration and help with Frosti.
+- Ziploc baggies (sandwich or gallon size)
+- Astrobright White Cardstock / Colored Paper
+- Lysol/Clorox Wipes
 
-  </BaseCard>
+Check out our [Amazon Wish List](https://www.amazon.com) for more options!
+
+### Our Favorite Things
+
+Mrs. Lacey loves:
+
+- Staying home
+- The beach
+- Warm weather
+- Games & puzzles
+- Plants
+
+Mrs. Rhoades loves:
+
+- Reading
+- IU Hoosiers
+- Sweets
+- Fall
+- Guacamole
+
+We can't wait to meet you and start our 2nd grade adventure together!
+
+</BaseCard>
 </BaseLayout>
